@@ -6,7 +6,7 @@ summary = Front end for the linux command DD with a progress bar.
 url = "https://github.com/jmp1617/LLUV.git"
 description-file = README.md
 license = MIT
-version = 1.2.3
+version = 1.2.4
 classifier =
     Natural Language :: English
     Operating System :: POSIX :: Linux
